--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -2,3 +2,4 @@ baseURL = 'https://loicpetit.github.io/blog/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'theme'
+cleanDestinationDir = true
