Change blog title Fix some intros Add new post on how display taxonomies in posts Update theme

--- a/src/hugo.yaml
+++ b/src/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: https://loicpetit.github.io/blog/
 languageCode: en-us
-title: Dev adventures
+title: Hello there!
 theme: theme
 cleanDestinationDir: true
 
